@@ -1,7 +1,7 @@
 //
 // Format.cpp
 //
-// $Id: //poco/1.4/Foundation/src/Format.cpp#5 $
+// $Id: //poco/1.4/Foundation/src/Format.cpp#6 $
 //
 // Library: Foundation
 // Package: Core
@@ -57,9 +57,9 @@ namespace
 			switch (*itFmt)
 			{
 			case '-': str.setf(std::ios::left); ++itFmt; break;
-			case '+': str.setf(std::ios::showpos); ++itFmt; break;
+			case '+': str.setf(std::ios::showpos | std::ios::internal); ++itFmt; break;
 			case '0': str.fill('0'); ++itFmt; break;
-			case '#': str.setf(std::ios::showpoint | std::ios_base::showbase); ++itFmt; break;
+			case '#': str.setf(std::ios::showpoint | std::ios::showbase); ++itFmt; break;
 			default:  isFlag = false; break;
 			}
 		}
